<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alergias</string>
   
	<!--  Dados do Autor [INICIO]-->  
    <string name="site_autor">http://www.diegoramos.info/</string>
    <string name="email_autor">rdiego26@gmail.com</string>	
	<!-- Dados do Autor [FIM]-->   
   
   <!-- Botões Padrões [INICIO] -->
	<string name="lbl_btn_cadastro">Cadastrar</string>
	<string name="lbl_btn_atualizar">Atualizar</string>   
   <!-- Botões Padrões [FIM] -->
	
    <!--  Cadastro de Alergia [INICIO]-->
    <string name="lbl_nome_cadastro_alergia">Alergia: *</string>
    <string name="place_holder_alergia">Alergia</string>
	<string name="place_holder_obs">Obs</string>
	<!-- Cadastro de Alergia [FIM]-->
   
    <!--  Cadastro de Category [INICIO]-->
    <string name="lbl_nome_categoria">CATEGORIA</string>
    <string name="place_holder_nome_categoria">Categoria</string>
    <!--  Cadastro de Category [FIM]-->
      
	<!--  Menu da tela principal [INICIO]-->      
	<string name="lbl_menu_lstcategoria">Categorias</string>
	<string name="lbl_menunome_lstalergia">Alergias</string>
	<!--  Menu da tela principal [FIM]-->
      
   <!--  Menu da tela Listar Alergias e Category [INICIO] -->
   <string name="lbl_menu_cad_cadastrar">Cadastrar</string>
   <string name="lbl_cabecalho_lst_alergia">Lista de Alergias</string>   
   <string name="lbl_cabecalho_lst_categoria">Lista de Categorias</string>
   <string name="lbl_cabecalho_lst_vazia_alergia">Nenhuma alergia cadastrada!\nUtilize o botão de menu para opções!</string>
   <string name="lbl_cabecalho_lst_vazia_categoria">Nenhuma categoria cadastrada!\nUtilize o botão de menu para opções!</string>      
   <!--  Menu da tela Listar Alergias e Category [FIM] -->

   <!--  Menu da tela Detalhes Alergias e Category [INICIO] -->
   <string name="lbl_menu_alterar">Alterar</string>	
   <string name="lbl_menu_voltar">Voltar</string>
   <string name="lbl_menu_excluir">Excluir</string>
   <!--  Menu da tela Detalhes Alergias e Category [FIM] -->
   
   <!--  ERROS E SUCESSO [INICIO]-->
   <string name="lbl_erro_duplicidade_alergia">Alergia já existe!</string>
   <string name="lbl_erro_duplicidade_categoria">Categoria já existe!</string>
   
   <string name="lbl_sucesso_cadastro_alergia">Alergia cadastrada!</string>
   <string name="lbl_falha_cadastro_alergia">Falha na tentativa de gravação!</string>   
   <string name="lbl_sucesso_cadastro_categoria">Categoria cadastrada!</string>
   <string name="lbl_falha_cadastro_categoria">Falha na tentativa de gravação!</string> 
   
   <string name="lbl_sucesso_alteracao_alergia">Alergia alterada!</string>   
   <string name="lbl_falha_alteracao_alergia">Falha na tentativa de alteração!</string>   
   <string name="lbl_sucesso_alteracao_categoria">Categoria alterada!</string>   
   <string name="lbl_falha_alteracao_categoria">Falha na tentativa de alteração!</string>
   
   <string name="lbl_sucesso_exclusao_alergia">Alergia excluída!</string>
   <string name="lbl_falha_exclusao_alergia">Falha na tentativa de exclusão!</string>   
   <string name="lbl_sucesso_exclusao_categoria">Categoria excluída!</string>
   <string name="lbl_falha_exclusao_categoria">Falha na tentativa de exclusão!</string>
   
   <string name="lbl_falha_abertura_market">Não foi possível abrir o Google Play, instale o aplicativo do Google Play e tente novamente.</string>
   <!--  ERROS [FIM]-->
   
   <!-- util [INICIO] -->
   <string name="lbl_campo">Campo</string>
   <string name="lbl_obrigatorio"> é obrigatório</string>
   <!-- util [FIM] -->
   
   <!-- Enviar Sugestão [INICIO] -->
   <string name="lbl_sugestao">Sugestões</string>
   <string name="lbl_btn_sugestao">Enviar Sugestão</string>
   <!-- Enviar Sugestão [FIM] -->
   
   <string name="ADMOB_PUBLISHER_ID">ca-app-pub-5968634501240875/6505346038</string>
   
   <!-- DASHBOARD -->
	<string name="dashboard_txtSugestao">Sugestões</string>
	<string name="dashboard_txtAvaliacao">Avaliar</string>
	<string name="dashboard_txtCategoria">Categorias</string>
	<string name="dashboard_txtAlergia">Alergias</string>
	
	<!-- Context Menu messages -->
	<string name="context_menu_update">Atualizar</string>
	<string name="context_menu_delete">Excluir</string>
	<string name="context_menu_register">Cadastrar</string>	
   
</resources>
