<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    style="@style/defaultBackground">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="6dip" >
 
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >
 
            <Button
                android:id="@+id/main_btn_category"
                android:drawableTop="@drawable/categoria"
                style="@style/dashBoardButton"
                android:onClick="onButtonClicker"
                android:text="@string/dashboard_txtCategoria" />
 
            <Button
                android:id="@+id/main_btn_allergie"
                android:drawableTop="@drawable/pill_red"
                style="@style/dashBoardButton"
                android:onClick="onButtonClicker"
                android:text="@string/dashboard_txtAlergia" />
        </LinearLayout>
 		
        
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/main_btn_rate"
                android:drawableTop="@drawable/star_yellow"
                style="@style/dashBoardButton"
                android:onClick="onButtonClicker"
                android:text="@string/dashboard_txtAvaliacao" />            
            
            <Button
                android:id="@+id/main_btn_sugestion"
                android:drawableTop="@drawable/lamp"
                style="@style/dashBoardButton"
                android:onClick="onButtonClicker"
                android:text="@string/dashboard_txtSugestao" />
            
        </LinearLayout>        
        
 
    </LinearLayout>
        	 <!-- PROPAGANDA   -->   
	<com.google.ads.AdView android:id="@+id/adView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@android:color/transparent"
                 ads:adUnitId="@string/ADMOB_PUBLISHER_ID"
                 ads:adSize="BANNER"
                 ads:loadAdOnCreate="true"/>
</LinearLayout>