<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
>
 
        
    <TextView 
		android:text="@string/lbl_nome_categoria"
		style="@style/textFont"
	/>
    
    <Spinner 
        android:id="@+cad_alergia/sp_categoria"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:prompt="@string/lbl_nome_categoria"
		style="@style/spinner"
        />
    
    <TextView 
		android:text="@string/lbl_nome_cadastro_alergia"
		style="@style/textFont"
	/>
    
   <EditText 
       android:id="@+cad_alergia/txt_nome_alergia"
       android:inputType="textCapWords"
       style="@style/inputStyle"
       />

    <TextView 
		android:text="@string/lbl_nome_cadastro_obs"
		style="@style/textFont"
	/>
    
   <EditText 
       android:id="@+cad_alergia/txt_obs_alergia"
       android:inputType="textCapWords"
       style="@style/inputStyle"
       />   
   
	<Button 
       android:text="@string/lbl_btn_cadastro"
       android:id="@+cad_alergia/btn_cadastrar"
       style="@style/botao"
       />

</LinearLayout>